.. -*-Mode: rst; -*-
=======
 0.9.2
=======

Enhanced capability querying [NEW]
----------------------------------
Previously only the pre-authentication server capabilities were
returned by the capabilities() method. Now, if the connection is
authenticated, the post-authentication capabilities will be returned.
If the server sent an untagged CAPABILITY response after authentication,
that will be used, avoiding an unnecessary CAPABILITY command call.

All this ensures that the client sees all available server
capabilities.

=======
 0.9.1
=======

Stream support [NEW]
--------------------
It is now possible to have IMAPClient run an external command to
establish a connection to the IMAP server via a new *stream* keyword
argument to the initialiser. This is useful for exotic connection or
authentication setups. The *host* argument is used as the command to
run.

Thanks to Dave Eckhardt for the original patch.

OAUTH2 Support [NEW]
--------------------
OAUTH2 authentication (as supported by Gmail's IMAP) is now available
via the new oauth2_login method. Thanks to Zac Witte for the original
patch.

livetest now handles Gmail's new message handling
-------------------------------------------------
Gmail's IMAP implementation recently started requiring a NOOP command
before new messages become visible after delivery or an APPEND. The
livetest suite has been updated to deal with this.

=====
 0.9
=====

Gmail Label Support
-------------------
New methods have been added for interacting with Gmail's label API:
get_gmail_labels, add_gmail_labels, set_gmail_labels,
remove_gmail_labels. Thanks to Brian Neal for the patches.

Removed Code Duplication (#9)
-----------------------------
A signficant amount of duplicated code has been removed by abstracting
out common command handling code. This will make the Python 3 port and
future maintenance easier.

livetest can now be run against non-dummy accounts (#108)
---------------------------------------------------------