@@ -37,6 +37,9 @@ Dave Eckhardt
 
 Zac Witte
     OAUTH2 support.
+
+Lukasz Mierzwa     
+    THREAD support. 
     
 Bug Reports
 ------------
